--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "LogReader",
+      "request": "launch",
+      "mainClass": "frc.Demacia.Sysid.LogReader",
+      "projectName": "Training2026"
+    },
+    {
+      "type": "java",
       "name": "Sysid",
       "request": "launch",
       "mainClass": "frc.Demacia.Sysid.Sysid",
